--- a/css/main.css
+++ b/css/main.css
@@ -95,52 +95,6 @@ main{
 }
 
 
-@media(min-width:400px )and (max-width: 600px) {
-
-.cuenta{
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.cuantofalta h3{
-  text-align: center;
-  display: flex;
-  justify-content:center;
-  align-items: center;
-  font-family: "Lilita One";
-  margin-top: 131px;
-  margin-bottom: -227px;
-  font-size: 1.1em;
-  text-align: center;
-  color: #ffdc3e;
-  text-shadow: 5px 2px 2px rgb(0, 0, 0);
-/* text-shadow: rgb(46, 46, 46) 2px 3px; */  
-}
-
-.inicio .separador{
-  margin-bottom: -649px;
-  object-fit: cover;
-}
-
-.asistencia{
-  margin: 15px;
-}
-.nombre{
-  display: block;
-}
-.nombregrande{
-  display: none;
-}
-}
-
-
-
-
-
 .contenedor{
   background-color: #fd3599; 
   background-image: url("/img/fondo1.jpg");
@@ -949,7 +903,7 @@ button .btn-primary{
 }
 
 
-@media (max-width: 563px) /*para A21 s*/
+@media (min-width:551px)and (max-width: 563px) /*para A21 s*/
 {
   .titulo_principal{
     margin-top: -465px;
@@ -1091,7 +1045,7 @@ button .btn-primary{
 } */
 
 
-@media (max-width: 500px)
+@media (min-width:400px) and (max-width: 500px)
 {
   .inicio {
   width: 100%;
@@ -1099,14 +1053,11 @@ button .btn-primary{
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
-    /* justify-content: center;
-    align-items: center; */
-    /* background-image: url(/img/portada.jpg); */
+    
    background-image:url(/img/portadaCopia.jpg);
-    /* background-position: center center; */
+    
     background-repeat: no-repeat;
-    background-position: 50% 50%; /*Era 50% 70%;*/
-    /* background-attachment: fixed; */
+    background-position: 50% 50%; 
     background-size: cover;
     margin-top: 70px; 
 }
@@ -1122,7 +1073,7 @@ button .btn-primary{
   text-align: center;
   color: #ffdc3e;
   text-shadow: 5px 2px 2px rgb(0, 0, 0);
-/* text-shadow: rgb(46, 46, 46) 2px 3px; */  
+
 }
 
 /* .contenedor1{
