--- a/css/navbar.css
+++ b/css/navbar.css
@@ -92,7 +92,7 @@
     top: 0;
     width: 100%;
     align-items: center;
-    background-color: var(--menu-mobile-background-color);
+    background-color: var(--theme-color);
     height: 100%;
     overflow-y: auto;
 
