--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ main{
       justify-content: center;
       align-items: center;
     
-      background-image: url("../img/foto\ portada1.JPG");
+      background-image: url("../img/foto\ portada.JPG");
       background-position: 50% -90%;
       background-size: cover;
     }
@@ -253,6 +253,109 @@ html {
   scroll-margin-top: 70px;
 } 
 
+@media(max-width:359px){
+  section.inicio{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 100vh;
+    background-image: url("/img/portadaCopia.jpg");
+    background-position: center; 
+    margin-top: 20%;
+    background-size: cover;
+
+  }
+  div >.simply-amount{
+    display: block;
+    text-align: center;
+    font-size: 4.5vh; /*era 3.5vh */
+    font-weight: 250px;
+  } 
+  .simply-section{
+    background: #ffffff;
+    margin: 0 3px;
+    border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  }
+
+
+  .cuandoydonde p{
+    font-size: 1.3em;
+  }
+  
+  .flecha-continuar{
+    display: none;
+  }  
+  .invitacion{
+    margin-top: 47px;
+  }
+  .boton{
+    margin-top: 32px;
+  }
+
+  .contenedor{
+    /* background-repeat: repeat-y; */
+    background-color: #fd3599; 
+    background-image: url("/img/fondo1.jpg");
+    background-position: center;
+  }
+  div > img.separador1{
+    background-color: #ff00a8;
+    margin-bottom: -29%;
+  }
+  .cuantofalta h3{
+    text-align: center;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    font-family: "Lilita One";
+    font-size: 1.1em;
+    text-align: center;
+    color: #ffdc3e;
+    text-shadow: 5px 2px 2px rgb(0, 0, 0);
+  /* text-shadow: rgb(46, 46, 46) 2px 3px; */  
+  }
+
+  .nombre{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .nombre >img{
+    margin-top: -155px;
+  }
+  .cuenta{
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -95%;
+  }
+  .ComoLlegar{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  .ComoLlegar img{
+    width: 60%;
+
+  }
+
+  .cuandoydonde p {
+    font-size: 1.3em;
+  }
+  .nombregrande > img{
+    display: none;
+  }
+  div > .separador{
+    margin-top: -13%;
+  }
+
+}
 
 @media (min-width:360px)and (max-width:390px){
 
@@ -261,8 +364,8 @@ html {
     justify-content: center;
     flex-wrap: wrap;
     height: 100vh;
-    background-image: url("../img/portada_mobile.jpg");
-    /* background-position: center; */
+    background-image: url("/img/portadaCopia.jpg");
+    background-position: center; 
     margin-top: 20%;
     background-size: cover;
 
@@ -344,7 +447,7 @@ html {
     /* flex-wrap: wrap; */
     justify-content: center;
     align-items: center;
-    margin-bottom: -42%;
+    margin-bottom: -95%;
   }
   .ComoLlegar{
     display: flex;
@@ -373,8 +476,8 @@ html {
     justify-content: center;
     flex-wrap: wrap;
     height: 100vh;
-    background-image: url("../img/portada_mobile.jpg");
-    /* background-position: center; */
+    background-image: url("../img/portadaCopia.jpg");
+    background-position: center; 
     margin-top: 13%;
     background-size: cover;
 
@@ -448,7 +551,7 @@ html {
     /* flex-wrap: wrap; */
     justify-content: center;
     align-items: center;
-    margin-bottom: -465px;
+    margin-bottom: -679px;
   }
   .ComoLlegar{
     display: flex;
@@ -468,51 +571,426 @@ html {
     display: none;
   }
   div > .separador{
-    margin-top: -72%;
+    margin-top: -11%;
   }
 
 
 }
 
 
-@media (min-width:600px) and (max-width:800px){
-  /* div > img.separador1{
-    background-color: #fd3599;
-  } */
-
+@media (min-width:566px) and (max-width:600px){
+  .flecha-continuar{
+    display: block;
+  }
   section.inicio{
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     height: 100vh;
-  }
-  /* .inicio img{
-    margin-bottom: -140%;
-  } */
+    background-image: url("../img/portadaCopia.jpg");
+    background-position: center; 
+    margin-top: 13%;
+    background-size: cover;
 
-  .cuantofalta h3{
-    margin-top: -96px;
-    margin-bottom: -227px;
   }
+  div >.simply-amount{
+    display: block;
+    text-align: center;
+    font-size: 4.5vh; /*era 3.5vh */
+    font-weight: 250px;
+  } 
+  .simply-section{
+    background: #ffffff;
+    margin: 0 3px;
+    border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  }
+
+
+  .cuandoydonde p{
+    font-size: 1.3em;
+  }
+
+  .invitacion{
+    margin-top: 47px;
+  }
+  .boton{
+    margin-top: 32px;
+  }
+
+  .contenedor{
+    /* background-repeat: repeat-y; */
+    background-color: #fd3599; 
+    background-image: url("/img/fondo1.jpg");
+    background-position: center;
+  }
+  div > img.separador1{
+    background-color: #ff00a8;
+    margin-bottom: -29%;
+  }
+  .cuantofalta{
+    margin-top: -245px;
+  }
+  .cuantofalta h3{
+    text-align: center;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    font-family: "Lilita One";
+    font-size: 1.1em;
+    text-align: center;
+    color: #ffdc3e;
+    text-shadow: 5px 2px 2px rgb(0, 0, 0);
+  /* text-shadow: rgb(46, 46, 46) 2px 3px; */  
+}
   .nombre{
     display: flex;
     justify-content: center;
     align-items: center;
   }
   .nombre >img{
-    margin-left: 20%;
-    margin-bottom:-37px;
+    margin-top: -610px;
+  }
+  .cuenta{
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -679px;
+  }
+  .ComoLlegar{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
   }
 
-  .cuenta{
-    margin-top: 104px;
+  .ComoLlegar img{
+    width: 60%;
+
   }
-  .nombregrande{
+
+  .cuandoydonde p {
+    font-size: 1.3em;
+  }
+  .nombregrande > img{
     display: none;
+  }
+  div > .separador{
+    margin-top: -11%;
   }
 
 
 }
 
+@media (min-width:601px){
+  .flecha-continuar{
+    display: block;
+  }
+  section.inicio{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 100vh;
+    background-image: url("../img/portadaCopia.jpg");
+    background-position: center; 
+    margin-top: 11%;
+    background-size: cover;
 
+  }
+  div >.simply-amount{
+    display: block;
+    text-align: center;
+    font-size: 5vh; /*era 3.5vh */
+    font-weight: 250px;
+  } 
+  .simply-section{
+    background: #ffffff;
+    margin: 0 7px;
+    border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  }
+
+
+  .cuandoydonde p{
+    font-size: 1.3em;
+  }
+
+  .invitacion{
+    margin-top: 47px;
+  }
+  .boton{
+    margin-top: 32px;
+  }
+
+  .contenedor{
+    /* background-repeat: repeat-y; */
+    background-color: #fd3599; 
+    background-image: url("/img/fondo1.jpg");
+    background-position: center;
+  }
+  div > img.separador1{
+    background-color: #ff00a8;
+    margin-bottom: -29%;
+  }
+  .cuantofalta{
+    margin-top: -245px;
+  }
+  .cuantofalta h3{
+    text-align: center;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    font-family: "Lilita One";
+    font-size: 2.1em;
+    text-align: center;
+    color: #ffdc3e;
+    text-shadow: 5px 2px 2px rgb(0, 0, 0);
+  /* text-shadow: rgb(46, 46, 46) 2px 3px; */  
+}
+  .nombre{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .nombre >img{
+    margin-top: -610px;
+  }
+  .cuenta{
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -679px;
+  }
+  .ComoLlegar{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  .ComoLlegar img{
+    width: 60%;
+
+  }
+
+  .cuandoydonde p {
+    font-size: 1.3em;
+  }
+  .nombregrande > img{
+    display: none;
+  }
+  div > .separador{
+    margin-top: -11%;
+  }
+
+}
+@media (min-width: 768px) and (max-width: 1024px){
+  .flecha-continuar{
+    display: block;
+  }
+  section.inicio{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 100vh;
+    background-image: url("../img/portadaCopia.jpg");
+    background-position: center center; 
+    margin-top: 8%;
+    background-size: cover;
+
+  }
+  div >.simply-amount{
+    display: block;
+    text-align: center;
+    font-size: 8vh; /*era 3.5vh */
+    font-weight: 250px;
+  } 
+  .simply-section{
+    background: #ffffff;
+    margin: 0 8px;
+    border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  }
+  .simply-word{
+    text-align: center;
+    font-size: 1.9em;
+  }
+
+
+  .cuandoydonde p{
+    font-size: 1.3em;
+  }
+
+  .invitacion{
+    margin-top: 47px;
+  }
+  .boton{
+    margin-top: 32px;
+  }
+
+  .contenedor{
+    /* background-repeat: repeat-y; */
+    background-color: #fd3599; 
+    background-image: url("/img/fondo1.jpg");
+    background-position: center;
+  }
+  div > img.separador1{
+    background-color: #ff00a8;
+    margin-bottom: -29%;
+  }
+  .cuantofalta{
+    margin-top: -245px;
+  }
+  .cuantofalta h3{
+    text-align: center;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    font-family: "Lilita One";
+    font-size: 2.5em;
+    text-align: center;
+    color: #ffdc3e;
+    text-shadow: 5px 2px 2px rgb(0, 0, 0);
+  /* text-shadow: rgb(46, 46, 46) 2px 3px; */  
+}
+  
+  .nombre >img{
+    display: none;
+  }
+  .cuenta{
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -838px;
+  }
+  .ComoLlegar{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  .ComoLlegar img{
+    width: 60%;
+
+  }
+
+  .cuandoydonde p {
+    font-size: 1.3em;
+  }
+  .nombregrande > img{
+    display: block;
+    margin-top: -56%;
+    margin-left: 14%;
+  }
+  div > .separador{
+    margin-top: -11%;
+  }
+
+}
+
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape){
+  .flecha-continuar{
+    display: block;
+  }
+  section.inicio{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 100vh;
+    background-image: url("../img/portadaCopia.jpg");
+    background-position: center center; 
+    margin-top: 8%;
+    background-size: cover;
+
+  }
+  div >.simply-amount{
+    display: block;
+    text-align: center;
+    font-size: 5vh; /*era 3.5vh */
+    font-weight: 250px;
+  } 
+  .simply-section{
+    background: #ffffff;
+    margin: 0 7px;
+    border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  }
+
+
+  .cuandoydonde p{
+    font-size: 1.3em;
+  }
+
+  .invitacion{
+    margin-top: 47px;
+  }
+  .boton{
+    margin-top: 32px;
+  }
+
+  .contenedor{
+    /* background-repeat: repeat-y; */
+    background-color: #fd3599; 
+    background-image: url("/img/fondo1.jpg");
+    background-position: center;
+  }
+  div > img.separador1{
+    background-color: #ff00a8;
+    margin-bottom: -29%;
+  }
+  .cuantofalta{
+    margin-top: -245px;
+  }
+  .cuantofalta h3{
+    text-align: center;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    font-family: "Lilita One";
+    font-size: 2.1em;
+    text-align: center;
+    color: #ffdc3e;
+    text-shadow: 5px 2px 2px rgb(0, 0, 0);
+  /* text-shadow: rgb(46, 46, 46) 2px 3px; */  
+}
+  
+  .nombre >img{
+    display: none;
+  }
+  .cuenta{
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -579px;
+  }
+  .ComoLlegar{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  .ComoLlegar img{
+    width: 60%;
+
+  }
+
+
+}
 
 .invitacion{
   display: flex;
@@ -1248,8 +1726,8 @@ section.inicio{
   justify-content: center;
   flex-wrap: wrap;
   height: 100vh;
-  background-image: url("../img/portada_mobile.jpg");
-  /* background-position: 50% 50%; */
+  background-image: url("../img/portadaCopia.jpg");
+  background-position: 50% 50%;
   margin-top: 16%;
   background-size: cover;
 }
@@ -1257,11 +1735,18 @@ section.inicio{
 .nombregrande{
   display: none;
 }
-.nombre{
-  display: flex;
+div.nombre > img{
+  margin-bottom: -58%;
+  margin-left: 20%;
+  margin-top: 82%;
+
+
+}
+/* .nombre{
+  display: flex; 
   justify-content: center;
   margin-top: 10%;
-}
+} */
 
 div >.simply-amount{
   display: block;
@@ -1289,7 +1774,7 @@ overflow: hidden;
   align-items: center;
   font-family: "Lilita One";
   margin-top: -109px;
-  margin-bottom: -132px;
+  margin-bottom: -737px;
   font-size: 1.1em;
   text-align: center;
   color: #ffdc3e;
@@ -1297,7 +1782,7 @@ overflow: hidden;
 
 }
 .separador{
-  margin-top: -16%;
+  margin-top: -18%;
 }
 
 /* .contenedor1{
@@ -1319,7 +1804,7 @@ section, .vacio{
   display: flex;
   text-align: center;
 
-  margin-top:11%;
+  margin-top:91%;
 }
 .cuantofalta,h3{
   font-size: 2.5em;
@@ -1357,27 +1842,18 @@ section .galeria {
 
 }
 
-@media (min-width:450px) and (max-width: 550px){
+@media (min-width:451px) and (max-width: 550px){
   section.inicio{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     height: 100vh;
-    background-image: url("../img/portada_mobile.jpg");
-    background-position: 50% 50%;
-    margin-top: 16%;
+    background-image: url("../img/portadaCopia.jpg");
+    background-position: center; 
+    margin-top: 13%;
     background-size: cover;
+
   }
-  
-  .nombregrande{
-    display: none;
-  }
-  .nombre{
-    display: flex;
-    justify-content: center;
-    margin-top: 30%;
-  }
-  
   div >.simply-amount{
     display: block;
     text-align: center;
@@ -1393,27 +1869,82 @@ section .galeria {
   justify-content: center;
   overflow: hidden;
   }
-  .separador1{
-    margin-bottom: -30%;
+
+
+  .cuandoydonde p{
+    font-size: 1.3em;
   }
   
+  .flecha-continuar{
+    display: none;
+  }  
+  .invitacion{
+    margin-top: 47px;
+  }
+  .boton{
+    margin-top: 32px;
+  }
+
+  .contenedor{
+    /* background-repeat: repeat-y; */
+    background-color: #fd3599; 
+    background-image: url("/img/fondo1.jpg");
+    background-position: center;
+  }
+  div > img.separador1{
+    background-color: #ff00a8;
+    margin-bottom: -29%;
+  }
+  .cuantofalta{
+    margin-top: -245px;
+  }
   .cuantofalta h3{
     text-align: center;
     display: flex;
     justify-content:center;
     align-items: center;
     font-family: "Lilita One";
-    margin-top: -109px;
-    margin-bottom: -227px;
     font-size: 1.1em;
     text-align: center;
     color: #ffdc3e;
     text-shadow: 5px 2px 2px rgb(0, 0, 0);
-  
+  /* text-shadow: rgb(46, 46, 46) 2px 3px; */  
+}
+  .nombre{
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  .separador{
-    margin-top: -16%;
+  .nombre >img{
+    margin-top: -610px;
   }
-  
+  .cuenta{
+    display: flex;
+    /* flex-wrap: wrap; */
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -625px;
+  }
+  .ComoLlegar{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  .ComoLlegar img{
+    width: 60%;
+
+  }
+
+  .cuandoydonde p {
+    font-size: 1.3em;
+  }
+  .nombregrande > img{
+    display: none;
+  }
+  div > .separador{
+    margin-top: -11%;
+  }
+
 
 }
